--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "npx astro build && npx wrangler pages dev ./dist",
-		"build": "npx astro build && npx wrangler pages deploy ./dist",
+		"deploy": "npx astro build && npx wrangler pages deploy ./dist",
 		"astro": "astro"
 	},
 	"dependencies": {
