--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "npx astro build && npx wrangler pages dev ./dist",
+		"build": "astro build",
+		"preview": "astro preview",
 		"deploy": "npx astro build && npx wrangler pages deploy ./dist",
 		"astro": "astro"
 	},
