--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.10",
+		"rollup-plugin-node-polyfills": "^0.2.1",
 		"tailwind-merge": "^3.0.2",
 		"wrangler": "^4.10.0"
 	}
