--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
 	"type": "module",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "npx astro build && npx wrangler pages dev ./dist",
+		"dev-wrangler": "npx astro build && npx wrangler pages dev ./dist",
+		"dev": "astro dev",
 		"build": "astro build",
 		"preview": "astro preview",
 		"deploy": "npx astro build && npx wrangler pages deploy ./dist",
-		"astro": "astro"
+		"astro": "astro",
+		"sync": "npx astro sync"
 	},
 	"dependencies": {
 		"@ai-sdk/google": "^1.2.10",
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/cloudflare": "^12.4.0",
+		"@astrojs/cloudflare": "^12.4.1",
+		"@astrojs/mdx": "^4.2.4",
 		"@tailwindcss/vite": "^4.0.10",
 		"ai": "^4.3.5",
-		"astro": "^5.4.2",
+		"astro": "^5.6.2",
 		"astro-seo": "^0.8.3",
 		"marked": "^15.0.7",
 		"svgo": "^3.3.2",
