--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/cloudflare": "^12.4.1",
 		"@astrojs/mdx": "^4.2.4",
-		"@tailwindcss/vite": "^4.0.10",
+		"@pythnetwork/client": "^2.22.1",
+		"@tabler/icons": "^3.31.0",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/vite": "^4.1.4",
 		"ai": "^4.3.5",
 		"astro": "^5.6.2",
 		"astro-seo": "^0.8.3",
 		"marked": "^15.0.7",
 		"svgo": "^3.3.2",
-		"tailwindcss": "^4.0.10",
+		"tailwind-variants": "^1.0.0",
+		"tailwindcss": "^4.1.4",
+		"tw-animate-css": "^1.2.5",
 		"typescript": "^5.8.2"
 	},
 	"devDependencies": {
