--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	},
 	"dependencies": {
 		"@ai-sdk/google": "^1.2.10",
+		"@astro-community/astro-embed-twitter": "^0.5.8",
+		"@astro-community/astro-embed-youtube": "^0.5.6",
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/cloudflare": "^12.4.1",
 		"@astrojs/mdx": "^4.2.4",
