--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
 		"@astro-community/astro-embed-twitter": "^0.5.8",
 		"@astro-community/astro-embed-youtube": "^0.5.6",
 		"@astrojs/check": "^0.9.4",
-		"@astrojs/cloudflare": "^12.5.4",
-		"@astrojs/mdx": "^4.3.0",
+		"@astrojs/cloudflare": "12.6.5",
+		"@astrojs/mdx": "4.3.4",
 		"@pythnetwork/client": "^2.22.1",
 		"@solana/web3.js": "^1.98.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/vite": "^4.1.4",
 		"ai": "^4.3.5",
-		"astro": "^5.9.2",
+		"astro": "5.13.3",
 		"astro-seo": "^0.8.3",
 		"marked": "^15.0.7",
 		"svgo": "4.0.0-rc.5",
