--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev-wrangler": "npx astro build && npx wrangler pages dev ./dist",
-		"dev": "astro dev",
+		"dev": "astro dev --host",
 		"build": "astro build",
 		"preview": "astro preview",
 		"deploy": "npx astro build && npx wrangler pages deploy ./dist",
